@@ -12,6 +12,7 @@ import uk.gov.hmcts.divorce.common.ccd.PageBuilder;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseData;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseDocuments;
 import uk.gov.hmcts.divorce.divorcecase.model.GeneralApplication;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationList;
 import uk.gov.hmcts.divorce.divorcecase.model.State;
 import uk.gov.hmcts.divorce.divorcecase.model.UserRole;
 import uk.gov.hmcts.divorce.document.DocumentRemovalService;
@@ -20,8 +21,9 @@ import uk.gov.hmcts.divorce.document.model.DocumentType;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
+import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.POST_SUBMISSION_STATES;
 import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.CASE_WORKER;
 import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.SUPER_USER;
@@ -44,6 +46,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
             .name("Remove documents")
             .description("Remove uploaded and generated documents")
             .showEventNotes()
+            .aboutToStartCallback(this::aboutToStart)
             .aboutToSubmitCallback(this::aboutToSubmit)
             .grant(CREATE_READ_UPDATE_DELETE, SUPER_USER)
             .grantHistoryOnly(CASE_WORKER))
@@ -55,7 +58,19 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                 .optional(CaseDocuments::getDocumentsGenerated)
                 .optional(CaseDocuments::getDocumentsUploaded)
                 .optional(CaseDocuments::getScannedDocuments)
+            .done()
+            .complex(CaseData::getRequestForInformationList)
+                .optional(RequestForInformationList::getRfiOnlineResponseDocuments)
             .done();
+    }
+
+    public AboutToStartOrSubmitResponse<CaseData, State> aboutToStart(final CaseDetails<CaseData, State> details) {
+
+        details.getData().getRequestForInformationList().buildResponseDocList();
+
+        return AboutToStartOrSubmitResponse.<CaseData, State>builder()
+            .data(details.getData())
+            .build();
     }
 
     public AboutToStartOrSubmitResponse<CaseData, State> aboutToSubmit(final CaseDetails<CaseData, State> details,
@@ -63,6 +78,8 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
 
         final var beforeCaseData = beforeDetails.getData();
         final var currentCaseData = details.getData();
+
+        beforeCaseData.getRequestForInformationList().buildResponseDocList();
 
         handleDeletionOfGeneralApplicationDocuments(beforeCaseData, currentCaseData);
         handleDeletionOfDivorceDocuments(beforeCaseData, currentCaseData);
@@ -96,19 +113,34 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
             currentCaseData.getDocuments().getDocumentsUploaded()
         ));
 
+        divorceDocsToRemove.addAll(findDocumentsForRemoval(
+            beforeCaseData.getRequestForInformationList().getRfiOnlineResponseDocuments(),
+            currentCaseData.getRequestForInformationList().getRfiOnlineResponseDocuments()
+        ));
+
         if (!divorceDocsToRemove.isEmpty()) {
             documentRemovalService.deleteDocument(divorceDocsToRemove);
+            currentCaseData.getRequestForInformationList().deleteRfiResponseDocuments(divorceDocsToRemove);
         }
+
+        currentCaseData.getRequestForInformationList().clearResponseDocList();
     }
 
     private List<ListValue<DivorceDocument>> findDocumentsForRemoval(final List<ListValue<DivorceDocument>> beforeDocs,
-                                                                     final List<ListValue<DivorceDocument>> currentDocs) {
+                                                                              final List<ListValue<DivorceDocument>> currentDocs) {
 
         List<ListValue<DivorceDocument>> documentsToRemove = new ArrayList<>();
 
         if (beforeDocs != null && currentDocs != null) {
             beforeDocs.forEach(document -> {
-                if (!currentDocs.contains(document)) {
+                DivorceDocument doc = document.getValue();
+                Optional<ListValue<DivorceDocument>> rfiResponseDoc =
+                    emptyIfNull(currentDocs)
+                        .stream()
+                        .filter(rfiDoc -> rfiDoc.getValue().equals(doc))
+                        .findFirst();
+
+                if (rfiResponseDoc.isEmpty()) {
                     documentsToRemove.add(document);
                 }
             });
@@ -136,7 +168,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                 .filter(divorceDocumentListValue ->
                     divorceDocumentListValue.getValue().getDocumentType() != null
                         && divorceDocumentListValue.getValue().getDocumentType().equals(DocumentType.GENERAL_APPLICATION))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         if (!generalAppDocs.isEmpty()) {
@@ -160,7 +192,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                 generalApplication.getGeneralApplicationDocuments()
                     .stream()
                     .filter(genAppDoc -> !genAppDoc.getValue().getDocumentLink().equals(document.getDocumentLink()))
-                    .collect(Collectors.toList())
+                    .toList()
             );
         }
     }
@@ -179,7 +211,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                     generalApplication.getGeneralApplicationDocuments()
                         .stream()
                         .filter(genAppDoc -> !genAppDoc.getValue().getDocumentLink().equals(document.getDocumentLink()))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
             }
         }
